defaults to None

--- a/prueba_default_values_mutables.ipynb
+++ b/prueba_default_values_mutables.ipynb
@@ -134,13 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prueba_default_values(param1 = [], param2 = {}, other_param= None):\n",
-    "    if other_param is None:\n",
+    "def prueba_default_values(param1 = None, param2 = None):\n",
+    "    if param1 is None:\n",
     "        param1 = []\n",
+    "    if param2 is None:\n",
     "        param2 = {}\n",
     "    param1.append(1)\n",
     "    param2[\"key1\"] = \"value1\"\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
        "([1], {'key1': 'value1'})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
        "([1], {'key1': 'value1'})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
